<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2022 Volkswagen AG
    Copyright (c) 2022 Fraunhofer-Gesellschaft zur Foerderung der angewandten Forschung e.V. (represented by Fraunhofer ISST)
    Copyright (c) 2022 Contributors to the Eclipse Foundation

    See the NOTICE file(s) distributed with this work for additional
    information regarding copyright ownership.

    This program and the accompanying materials are made available under the
    terms of the Apache License, Version 2.0 which is available at
    https://www.apache.org/licenses/LICENSE-2.0.

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
    License for the specific language governing permissions and limitations
    under the License.

    SPDX-License-Identifier: Apache-2.0

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.1</version>
        <relativePath/>
    </parent>
    <groupId>org.eclipse.tractusx.puris</groupId>
    <artifactId>puris-backend</artifactId>
    <version>2.1.0</version>
    <name>puris-backend</name>
    <description>PURIS Backend</description>
    <properties>
        <dash-tool.version>1.1.0</dash-tool.version>
        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
        <hsqldb.version>2.7.3</hsqldb.version>
        <java.version>21</java.version>
        <license-maven-plugin.version>4.5</license-maven-plugin.version>
        <modelmapper.version>3.2.0</modelmapper.version>
        <okhttp.version>4.12.0</okhttp.version>
        <postgresql.version>42.7.3</postgresql.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <springdoc.version>2.7.0</springdoc.version>
        <edc-connector-version>0.7.0</edc-connector-version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.session</groupId>
            <artifactId>spring-session-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>${hsqldb.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgresql.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>${okhttp.version}</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>mockwebserver</artifactId>
            <version>${okhttp.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${hibernate-validator.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
        <dependency>
            <groupId>org.modelmapper</groupId>
            <artifactId>modelmapper</artifactId>
            <version>${modelmapper.version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.eclipse.edc/json-ld-lib -->
        <dependency>
            <groupId>org.eclipse.edc</groupId>
            <artifactId>json-ld-lib</artifactId>
            <version>${edc-connector-version}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.eclipse.edc/json-ld-spi -->
        <dependency>
            <groupId>org.eclipse.edc</groupId>
            <artifactId>json-ld-spi</artifactId>
            <version>${edc-connector-version}</version>
        </dependency>
    </dependencies>
    <pluginRepositories>
        <pluginRepository>
            <id>dash-licenses</id>
            <url>https://repo.eclipse.org/content/repositories/dash-licenses</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.eclipse.dash</groupId>
                <artifactId>license-tool-plugin</artifactId>
                <version>${dash-tool.version}</version>
                <configuration>
                    <projectId>automotive.tractusx</projectId>
                    <!-- name of dependencies file -->
                    <summary>../DEPENDENCIES_BACKEND</summary>
                    <!-- include test dependencies -->
                    <includeScope>test</includeScope>
                </configuration>
                <executions>
                    <execution>
                        <id>license-check</id>
                        <goals>
                            <goal>license-check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                        <!-- keep for testing purposes, but exclude for security reasons -->
                        <exclude>
                            <groupId>org.hsqldb</groupId>
                            <artifactId>hsqldb</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-maven-plugin.version}</version>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <header>scripts/license/header.txt</header>
                            <excludes>
                                <exclude>**/README</exclude>
                                <exclude>src/test/resources/**</exclude>
                                <exclude>src/main/resources/**</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <!-- add basic application properties -->
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <includes>
                    <include>application.properties</include>
                    <!-- add json-ld data-->
                    <include>json-ld/*</include>
                    <include>banner.txt</include>
                </includes>
                <targetPath>BOOT-INF/classes/</targetPath>
            </resource>
            <!-- add legal information to META-INF -->
            <resource>
                <directory>${project.basedir}/</directory>
                <includes>
                    <include>README.md</include>
                    <include>LICENSE</include>
                    <include>NOTICE.md</include>
                    <include>DEPENDENCIES</include>
                    <include>SECURITY.md</include>
                </includes>
                <targetPath>META-INF</targetPath>
            </resource>
        </resources>
    </build>
</project>
